--- a/www/css/index.css
+++ b/www/css/index.css
@@ -20,7 +20,18 @@
     -webkit-tap-highlight-color: rgba(0,0,0,0); /* make transparent link selection, adjust last value opacity 0 to 1.0 */
 }
 
-body {
+html{
+    height: 100%;
+}
+
+body{
+    width:100%;
+    height: 100%;
+    margin:0px;
+    padding:0px;
+}
+
+.app_init {
     -webkit-touch-callout: none;                /* prevent callout to copy image, etc when tap to hold */
     -webkit-text-size-adjust: none;             /* prevent webkit from resizing text to fit */
     -webkit-user-select: none;                  /* prevent copy paste, to allow, change 'none' to 'text' */
@@ -46,7 +57,7 @@ body {
 }
 
 /* Portrait layout (default) */
-.app {
+.app_init .app {
     background:url(../img/logo.png) no-repeat center top; /* 170px x 200px */
     position:absolute;             /* position in the center of the screen */
     left:50%;
@@ -69,7 +80,7 @@ body {
     }
 }
 
-h1 {
+.app_init h1 {
     font-size:24px;
     font-weight:normal;
     margin:0px;
@@ -78,7 +89,7 @@ h1 {
     text-align:center;
 }
 
-.event {
+.app_init .event {
     border-radius:4px;
     -webkit-border-radius:4px;
     color:#FFFFFF;
@@ -87,12 +98,12 @@ h1 {
     padding:2px 0px;
 }
 
-.event.listening {
+.app_init .event.listening {
     background-color:#333333;
     display:block;
 }
 
-.event.received {
+.app_init .event.received {
     background-color:#4B946A;
     display:none;
 }
@@ -109,7 +120,7 @@ h1 {
     to { opacity: 1.0; }
 }
  
-.blink {
+.app_init .blink {
     animation:fade 3000ms infinite;
     -webkit-animation:fade 3000ms infinite;
 }
