--- a/www/css/style.css
+++ b/www/css/style.css
@@ -1,3 +1,7 @@
+.l-content {
+  padding: 0px 10px;
+  height: 100%; }
+
 .drumroll {
   display: block;
   border: 1px solid #777777;
@@ -10,3 +14,44 @@
     list-style: none;
     padding: 0px;
     margin: 0px; }
+
+.index_view {
+  position: relative;
+  height: 100%;
+  width: 100%; }
+  .index_view .index_view-time {
+    position: absolute;
+    width: 100%;
+    left: 0px;
+    top: 10%;
+    font-size: 2.8rem;
+    text-align: center; }
+  .index_view .index_view-set {
+    position: relative;
+    width: 100%;
+    left: 0px;
+    top: 40%;
+    font-size: 2.8rem; }
+    .index_view .index_view-set .index_view-set_count {
+      position: relative;
+      width: 40%;
+      text-align: right; }
+      .index_view .index_view-set .index_view-set_count .index_view-set_unit {
+        position: absolute;
+        top: 0.2em;
+        left: 155%;
+        text-transform: uppercase;
+        font-size: 0.8em; }
+    .index_view .index_view-set .index_view-set_up {
+      position: absolute;
+      top: -70%;
+      left: 45%; }
+    .index_view .index_view-set .index_view-set_down {
+      position: absolute;
+      top: 60%;
+      left: 45%; }
+  .index_view .index_view-start_button {
+    position: absolute;
+    width: 100%;
+    left: 0px;
+    top: 70%; }
