--- a/www/css/style.css
+++ b/www/css/style.css
@@ -1,6 +1,11 @@
+@font-face {
+  font-family: "Oswald-Regular";
+  src: url(/fonts/Oswald/Oswald-Regular.ttf); }
+
 .l-content {
   padding: 0px 10px;
-  height: 100%; }
+  height: 100%;
+  background-color: #ffffff; }
 
 .drumroll {
   display: block;
@@ -55,3 +60,55 @@
     width: 100%;
     left: 0px;
     top: 70%; }
+
+.timer_view {
+  font-family: Oswald-Regular; }
+  .timer_view .timer_view-round_wrapper {
+    letter-spacing: 0.1em;
+    text-align: right;
+    font-size: 2.1rem; }
+    .timer_view .timer_view-round_wrapper .timer_view-round_unit {
+      font-size: 0.6em;
+      text-transform: uppercase; }
+  .timer_view .timer_view-status_wrapper {
+    margin-top: 50px; }
+    .timer_view .timer_view-status_wrapper .timer_view-status_list_wrapper {
+      list-style: none;
+      margin: 0px;
+      padding: 0px; }
+      .timer_view .timer_view-status_wrapper .timer_view-status_list_wrapper .timer_view-status_list {
+        display: inline-block;
+        width: 33%;
+        color: #b9b9b9;
+        font-size: 1.3rem;
+        letter-spacing: 0.1em;
+        text-align: center;
+        text-transform: uppercase; }
+        .timer_view .timer_view-status_wrapper .timer_view-status_list_wrapper .timer_view-status_list.timer_view-status_list_active {
+          color: #3f3c3c; }
+    .timer_view .timer_view-status_wrapper .tiemr_view-status {
+      font-size: 2.5rem;
+      letter-spacing: 0.1em;
+      margin-top: 50px;
+      text-align: center;
+      text-transform: uppercase; }
+    .timer_view .timer_view-status_wrapper .timer_view-countdown_wrapper {
+      letter-spacing: 0.1em;
+      font-size: 2.8rem;
+      text-align: center; }
+      .timer_view .timer_view-status_wrapper .timer_view-countdown_wrapper .timer_view-countdown {
+        padding-left: 0.2em; }
+      .timer_view .timer_view-status_wrapper .timer_view-countdown_wrapper .timer_view-countdown_unit {
+        font-size: 0.8em; }
+  .timer_view .timer_view-button_area {
+    width: 100%; }
+    .timer_view .timer_view-button_area .timer_view-button_wrapper {
+      list-style: none;
+      margin: 30px 0px 0px 0px;
+      padding: 0px; }
+      .timer_view .timer_view-button_area .timer_view-button_wrapper .timer_view-button {
+        display: inline-block;
+        width: 45%; }
+        .timer_view .timer_view-button_area .timer_view-button_wrapper .timer_view-button:first-child {
+          margin-left: 2.5%;
+          margin-right: 5%; }
