--- a/src/scss/module/timerView.scss
+++ b/src/scss/module/timerView.scss
@@ -1,5 +1,5 @@
 .timer_view{
-    font-family: Oswald-Regular;
+    font-family: "Oswald-Regular";
     // 右上のセット数表示
     .timer_view-round_wrapper{
         // font-family: Oswald-Regular;
