--- a/src/scss/tool/fontFace.scss
+++ b/src/scss/tool/fontFace.scss
@@ -1,4 +1,4 @@
 @font-face {
-    font-family: "Oswald-Regular";
-    src: url(/fonts/Oswald/Oswald-Regular.ttf);
+    font-family: 'Oswald-Regular';
+    src: url('./fonts/Oswald/Oswald-Regular.ttf') format('truetype');
 }
